syntax = "proto3";

package Kartoffel;

service Kartoffel {
    rpc SearchOG(SearchOGRequest) returns (OGArray) {}
    rpc CreateOG(CreateOGRequest) returns (OrganizationGroup){}
    rpc CreateDI(CreateDIRequest) returns (DigitalIdentity){}
    rpc CreateRole(CreateRoleRequest) returns (Role){}
    rpc ConnectRoleAndDI(ConnectRoleAndDIRequest) returns (SuccessMessage){}
    rpc SearchEntitiesByFullName(SearchEntitiesByFullNameRequest) returns (EntityArray){}
    rpc GetEntityByIdNumber(GetEntityByIdNumberRequest) returns (Entity){}
    rpc GetRoleByRoleId(GetRoleByRoleIdRequest) returns (Role){}
    rpc GetRolesUnderOG(GetRolesUnderOGRequest) returns (RoleArray){}
    rpc ConnectEntityAndDI(ConnectEntityAndDIRequest) returns (SuccessMessage){}
    rpc CreateEntity(CreateEntityRequest) returns (Entity){}
    rpc GetEntityByRoleId(GetEntityByRoleIdRequest) returns (Entity){}
    rpc DisconnectDIFromEntity(DisconnectDIFromEntityRequest) returns (SuccessMessage){}
    rpc GetEntityByMongoId(GetEntityByMongoIdRequest) returns (Entity){}
    rpc DeleteOG(DeleteOGRequest) returns (SuccessMessage){}
    rpc GetChildrenOfOG(GetChildrenOfOGRequest) returns (OGArray){}
    rpc DeleteRole(DeleteRoleRequest) returns (SuccessMessage){}
    rpc DeleteDI(DeleteDIRequest) returns (SuccessMessage){}
    rpc GetEntitiesUnderOG(GetEntitiesUnderOGRequest) returns (EntityArray){}
}

// SearchOG
message SearchOGRequest{
    string hierarchyAndName = 1;
}

message OGArray{
    repeated OrganizationGroup groups = 1;
}

// CreateOG
message CreateOGRequest{
    string name = 1;
    string parentId = 2;
    string source = 3;
}

// CreateDI
message CreateDIRequest{
    string type = 1;
    string source = 2;
    string uniqueId = 3;
}

// CreateRole
message CreateRoleRequest{
    string jobTitle = 1;
    string directGroupId = 2;
    string source = 3;
    string roleId = 4;
}

// ConnectRoleAndDI
message ConnectRoleAndDIRequest{
    string id = 1; //mongoId of role
    string uniqueId = 2; //uniqueId of DI
}

// SearchEntitiesByFullName
message SearchEntitiesByFullNameRequest{
    string fullName = 1;
}
message EntityArray{
    repeated Entity entities = 1;
}

// GetEntityByIdNumber
message GetEntityByIdNumberRequest{
    string idNumber = 1; //identityCard or personalNumber
}

// GetRoleByRoleId
message GetRoleByRoleIdRequest{
    string roleId = 1;
}

// GetRolesUnderOG
message GetRolesUnderOGRequest{
    string id = 1; //mongoId of OG
}

message RoleArray{
    repeated Role roles = 1;
}

// ConnectEntityAndDI
message ConnectEntityAndDIRequest{
    string id = 1; //mongoId of entity
    string uniqueId = 2; //uniqueId of DI (taken from the role)
}

// CreateEntity
message CreateEntityRequest{
    string firstName = 1;
    string lastName = 2;
    string identityCard = 3;
    string personalNumber = 4;
    string serviceType = 5;
    repeated string phone = 6;
    repeated string mobilePhone = 7;
    string clearance = 8;
    string sex = 9;
    int64 birthdate = 10;
    string entityType = 11;
}

// GetEntityByRoleId
message GetEntityByRoleIdRequest{
    string roleId = 1;
}

// DisconnectDIFromEntity
message DisconnectDIFromEntityRequest{
    string id = 1; //mongoId of entity
    string uniqueId = 2; //uniqueId of DI (taken from the role)
}

// GetEntityByMongoId
message GetEntityByMongoIdRequest{
    string id = 1; //mongoId of entity
}

// DeleteOG
message DeleteOGRequest{
    string id = 1; //mongoId of OG
}

// GetChildrenOfOG
message GetChildrenOfOGRequest{
    string id = 1; //mongoId of OG
}

// DeleteRole
message DeleteRoleRequest{
    string roleId = 1;
}

// DeleteDI
message DeleteDIRequest{
    string uniqueId = 1; //uniqueId of DI (taken from the role)
}

// GetEntitiesUnderOG
message GetEntitiesUnderOGRequest{
    string id = 1; //mongoIds of OG
}



//SuccessMessage
message SuccessMessage{
    bool success = 1;
}



// Kartoffel enums
enum Source{
    SOURCE_1 = 0;
    SOURCE_2 = 1;
}

enum OGStatus{
    ACTIVE = 0;
    IN_ACTIVE = 1;
}

enum Sex{
    MALE = 0;
    FEMALE = 1;
}

enum ServiceType{
    SOLDIER = 0;
    RESERVED = 1;
    CIVILIAN = 2;
}

enum EntityType{
    SOLDIER = 0;
    RESERVED = 1;
    CIVILIAN = 2;
}

enum Clearance{
    LEVEL_1 = 0;
    LEVEL_2 = 1;
    LEVEL_3 = 2;
    LEVEL_4 = 3;
    LEVEL_5 = 4;
    YELLOW = 5;
}


// Kartoffel messages

message OrganizationGroup{
    string id = 1;
    string name = 2;
    string source = 3;
    repeated string ancestors = 4;
    string hierarchy = 5;
    string status = 6;
    bool isLeaf = 7;
    int64 createdAt = 8;
    int64 updatedAt = 9;
    repeated Entity directEntities = 10;
    repeated Role directRoles = 11;
}

message Role{
    string roleId = 1;
    string jobTitle = 2;
    string digitalIdentityUniqueId = 3;
    string directGroup = 4;
    string hierarchy = 5;
    repeated string hierarchyIds = 6;
    string source = 7;
    int64 createdAt = 8;
    int64 updatedAt = 9;
}


message Entity{
    string id = 1;
    string displayName = 2;
    string directGroup = 3;
    string hierarchy = 4;
    string entityType = 5;
    required string identityCard = 6;
    string personalNumber = 7;
    string serviceType = 8;
    required string firstName = 9;
    string lastName = 10;
    string akaUnit = 11;
    int64 dischargeDay = 12;
    string rank = 13;
    string mail = 14;
    string jobTitle = 15;
    repeated string phone = 16;
    repeated string mobilePhone = 17;
    string address = 18;
    string clearance = 19;
    string sex = 20;
    int64 birthdate = 21;
    int64 createdAt = 22;
    int64 updatedAt = 23;
    repeated DigitalIdentity digitalIdentities = 24;
}

message DigitalIdentity{
    string type = 1;
    string source = 2;
    string mail = 3;
    string uniqueId = 4;
    string entityId = 5;
    int64 createdAt = 6;
    int64 updatedAt = 7;
    bool isRoleAttachable = 8;
    Role role = 9;
}

